--- a/App.Local.config
+++ b/App.Local.config
@@ -1,12 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <!--<add key="base_url" value="http://localhost:5000" />
+    <add key="base_url" value="http://localhost:5000" />
     <add key="base_url_token" value="https://test.join-data.net" />
-    <add key="client_secret" value="52209806-8aaf-4c9f-92fd-a74851d09675" />-->
-    <add key="base_url" value="https://integration.join-data.net" />
-    <add key="base_url_token" value="https://integration.join-data.net" />
-    <add key="client_secret" value="2fc14511-fb52-46f1-a9db-4c477073f9bd" />
+    <add key="client_secret" value="52209806-8aaf-4c9f-92fd-a74851d09675" />
 
     <add key="path_url" value="adapter-milking-visits/api/locations/nl.kvk/7000001/milking-visits" />
     <add key="path_url_token" value="auth/realms/datahub/protocol/openid-connect/token" />
