Use request bodies in TestData.

--- a/App.Gea.config
+++ b/App.Gea.config
@@ -2,17 +2,12 @@
 <configuration>
   <appSettings>
     <add key="base_url" value="http://localhost:5000" />
-    <!--<add key="base_url_token" value="https://test.join-data.net" />-->
     <add key="base_url_token" value="https://integration.join-data.net" />
-    <!--<add key="client_secret" value="52209806-8aaf-4c9f-92fd-a74851d09675" />-->
-    <add key="client_secret" value="T0m8jSnOqUNfFe9ZbHTzmDibiTudrJ8T" />
+    <add key="client_secret" value="2fc14511-fb52-46f1-a9db-4c477073f9bd" />
 
     <add key="path_url" value="adapter-milking-visits/api/locations/nl.kvk/7000001/milking-visits" />
     <add key="path_url_token" value="auth/realms/datahub/protocol/openid-connect/token" />
-    <!--<add key="client_id" value="farmer-rem" />-->
-    <add key="client_id" value="47c83dd4" />
+    <add key="client_id" value="farmer-rem" />
     <add key="grant_type" value="client_credentials" />
-  
-    <add key="CallCount" value="150" />
   </appSettings>
 </configuration>
