--- a/App.config
+++ b/App.config
@@ -1,18 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="base_url" value="http://localhost:5000" />
-    <!--<add key="base_url_token" value="https://test.join-data.net" />-->
+    <add key="base_url" value="https://integration.join-data.net" />
     <add key="base_url_token" value="https://integration.join-data.net" />
-    <!--<add key="client_secret" value="52209806-8aaf-4c9f-92fd-a74851d09675" />-->
-    <add key="client_secret" value="T0m8jSnOqUNfFe9ZbHTzmDibiTudrJ8T" />
 
-    <add key="path_url" value="adapter-milking-visits/api/locations/nl.kvk/7000001/milking-visits" />
+    <add key="path_url" value="adapter-milking-visits/api/locations/nl.ubn/6026088/milking-visits" />
     <add key="path_url_token" value="auth/realms/datahub/protocol/openid-connect/token" />
-    <!--<add key="client_id" value="farmer-rem" />-->
+
     <add key="client_id" value="47c83dd4" />
+    <add key="client_secret" value="T0m8jSnOqUNfFe9ZbHTzmDibiTudrJ8T" />
     <add key="grant_type" value="client_credentials" />
-  
-    <add key="CallCount" value="150" />
+
+    <add key="RepeatCount" value ="100"/>
   </appSettings>
 </configuration>
